fixed text size (section description) on mobile

--- a/src/styles/blocks/product.scss
+++ b/src/styles/blocks/product.scss
@@ -41,7 +41,12 @@
   }
 
   &__desc {
+    font-size: 16px;
+    line-height: 22px;
+    
+    @include onTablet {
     font-size: 24px;
     line-height: 34px;
+   }
   }
 }
